<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/filterNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/forward_messages_from_number"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/countryCodeSpinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_phone_number" />

    <EditText
        android:id="@+id/and_or_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:editable="false"
        android:textAlignment="center"
        android:visibility="visible"
        android:layout_marginTop="30dp"
        android:text="@string/and_or"/>

    <Spinner
        android:id="@+id/andOrSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/filterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/forward_messages_containing_following_text"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/keywordsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text_to_filter" />

    <Button
        android:id="@+id/saveFilterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/save_filter" />

</LinearLayout>
